--- a/TechJobsMVC/Views/List/Index.cshtml
+++ b/TechJobsMVC/Views/List/Index.cshtml
@@ -13,9 +13,15 @@
     <tr>
         @{
             //TODO #2: Complete the View Jobs By Category Table
+            <td>
+                <ul>
+                    <li>
+                        <a asp-controller="List" asp-action="Jobs" asp-route-column="all">View All</a>
+                    </li>
+                </ul>
+            </td>
         }
 
-        <td></td> @* Feel free to remove or modify this element if necessary. *@
         @foreach (var category in ViewBag.tableChoices)
         {
             <td>
