--- a/TechJobsMVC/Views/Search/Index.cshtml
+++ b/TechJobsMVC/Views/Search/Index.cshtml
@@ -28,6 +28,21 @@
 
     @{
         //TODO #4: Loop over the search results to display all job fields.
+        <table class="job-listing">
+        @foreach(Job job in ViewBag.jobs)
+            {
+                <tr>
+                    <td>
+                        ID: @job.Id<br />
+                        Name: @job.Name<br />
+                        Employer: @job.Employer<br />
+                        Location: @job.Location<br />
+                        Position Type: @job.PositionType<br />
+                        Skill: @job.CoreCompetency
+                    </td>
+                </tr>
+            }
+        </table>
     }
 
 </div>
